# crook_calculator

./: Cargo.toml  LICENSE  README.md
src/: element.rs  equation_computation.rs  input_processing.rs  lib.rs  main.rs
tests/: integration_test.rs
