[package]
name = "crook_calculator"
version = "0.1.1"
edition = "2021"
description = "Provides one function to compute mathematical equations from string slices."
repository = "https://github.com/LucasHazardous/crook_calculator"
keywords = ["math", "equation"]
categories = ["mathematics"]
license = "MIT"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
